--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: check-powershell-scripts
   name: Check PowerShell Scripts
   description: This hook uses PSAnalyzer and checks PowerShell scripts files
-  entry: python -m esp_pwsh_check
-  language: python
+  language: docker
+  entry: pwsh_checker.ps1
   files: '.+\.ps1$'
